--- a/public/angular-views/static-views/index.html
+++ b/public/angular-views/static-views/index.html
@@ -1,19 +1,1 @@
-<md-content  layout-gt-sm="row" layout-padding >
-	<form ng-submit="login()" layout="column" flex  class="big_gutter">
-	 	
-
-	  	<md-input-container>
-	    	<label>Email</label>
-	    	<input ng-model="user.email" type="email">
-	  	</md-input-container>
-
-	  	<md-input-container>
-	  	   	<label>Password</label>
-	  	   	<input ng-model="user.password" type="password">
-	  	 	</md-input-container>
-
-	  	<md-input-container>
-	  		<input class="md-button md-raised md-primary" type="submit" aria-label="signin button" value="Login" name="login_button">
-	  	</md-input-container>
-	</form>
-</md-content>
+<div ui-view="nav"></div>
