Slow start on nav

--- a/public/angular-views/static-views/nav.html
+++ b/public/angular-views/static-views/nav.html
@@ -1,1 +1,14 @@
-asdsd
+<md-sidenav md-component-id="left" class="md-sidenav-left">
+	Left Nav!
+</md-sidenav>
+
+<md-button ng-if="$mdMedia('sm')" ng-click="openLeftMenu()"><i class="material-icons">menu</i></md-button>
+
+
+<div ng-if="$mdMedia('gt-sm')" layout="row" layout-align="space-around">
+	<div class="font_1_75" style="margin-top: 6px;line-height: 36px;">Alan Rowell</div>
+	<md-button>Selected Work</md-button>
+	<md-button>Commercial</md-button>
+	<md-button>Narrative</md-button>
+
+</div>
