Fix credential naming

--- a/public/angular-views/static-views/register.html
+++ b/public/angular-views/static-views/register.html
@@ -7,7 +7,7 @@
 	    	<input ng-model="user.email" type="email">
 	  	</md-input-container>
 
-	  	<md-input-container md-no-float>
+	  	<md-input-container md-no-float class="md-input-has-placeholder">
 	  	   	<label>Password</label>
 	  	   	<input ng-model="user.password" type="password">
 	  	 	</md-input-container>
