Creating thumb and uploading to s3

--- a/public/angular-views/admin-views/admin-page.html
+++ b/public/angular-views/admin-views/admin-page.html
@@ -8,9 +8,9 @@
             <img style="width: 75%; max-height:168px !important;" ng-src="{{ img }}" >
         </md-grid-tile>
 
-        <md-grid-tile>
+        <!-- <md-grid-tile>
         	<img ng-src="https://als-portfolio.s3.eu-west-1.amazonaws.com/download.jpg" style="width: 75%;max-height: 168px">
-        
+        </md-grid-tile> -->
       </md-grid-list>
 	
 </md-content>
