Create afterCreate hook on photo

--- a/public/angular-views/admin-views/admin-page.html
+++ b/public/angular-views/admin-views/admin-page.html
@@ -20,7 +20,7 @@
 	<form ng-submit="upload()" class="center_text" layout="column" layout-align="space-around">
 		<h3>Select which category to upload this photo to!</h3>
 		<md-input-container class="width_50 center">
-		  <md-select ng-model="bla" placeholder="Select category">
+		  <md-select ng-model="file.category" placeholder="Select category">
 		    <md-option value="cork_city">Cork City</md-option>
 		    <md-option value="stuff">Stuff</md-option>
 		  </md-select>
