Breaks not working

--- a/public/angular-views/static-views/index.html
+++ b/public/angular-views/static-views/index.html
@@ -1,6 +1,6 @@
 <md-content>
 
-	<md-grid-list md-cols-gt-xs="3" md-cols="2" md md-row-height="16:9"  >
+	<md-grid-list md-cols-gt-sm="3" md-cols="2" md md-row-height="16:9"  >
         <md-grid-tile 	class="gray" ng-repeat="img in img_urls">
             <img style="width: 75%; max-height:168px !important;" ng-src="{{ img }}" >
         </md-grid-tile>
