--- a/public/angular-views/static-views/nav.html
+++ b/public/angular-views/static-views/nav.html
@@ -7,7 +7,7 @@
 
 	</div>
 </md-sidenav>
-
+{{$mdMedia('xs')}}
 <md-button ng-if="$mdMedia('xs')" ng-click="openLeftMenu()"><i class="material-icons">menu</i></md-button>
 
 
