--- a/public/angular-views/static-views/nav.html
+++ b/public/angular-views/static-views/nav.html
@@ -7,11 +7,11 @@
 
 	</div>
 </md-sidenav>
-{{$mdMedia('xs')}}
-<md-button ng-if="$mdMedia('xs')" ng-click="openLeftMenu()"><i class="material-icons">menu</i></md-button>
+
+<md-button class="show_on_small" ng-click="openLeftMenu()"><i class="material-icons">menu</i></md-button>
 
 
-<div ng-if="$mdMedia('gt-xs')" layout="row" layout-align="space-around">
+<div class="show_gt_600" layout="row" layout-align="space-around">
 	<div class="font_1_75" style="margin-top: 6px;line-height: 36px;">Alan Rowell</div>
 	<md-button>Selected Work</md-button>
 	<md-button>Commercial</md-button>
