--- a/public/angular-views/static-views/nav.html
+++ b/public/angular-views/static-views/nav.html
@@ -8,8 +8,9 @@
 	</div>
 </md-sidenav>
 
-<md-button class="show_on_small" ng-click="openLeftMenu()"><i class="material-icons">menu</i></md-button>
+{{ $mdMedia('xs')}}
 
+<md-button class="show_on_small" ng-click="openLeftMenu()"><i class="material-icons">menu</i></md-button>
 
 <div class="show_gt_600" layout="row" layout-align="space-around">
 	<div class="font_1_75" style="margin-top: 6px;line-height: 36px;">Alan Rowell</div>
