--- a/public/angular-views/static-views/nav.html
+++ b/public/angular-views/static-views/nav.html
@@ -1,21 +1,15 @@
 <md-sidenav md-component-id="left" class="md-sidenav-left">
 	<div  layout="column" layout-align="space-around">
 		<div class="font_1_75" style="margin-top: 6px;line-height: 36px;">Alan Rowell</div>
-		<md-button>Selected Work</md-button>
-		<md-button>Commercial</md-button>
-		<md-button>Narrative</md-button>
-
+		<md-button ng-repeat="cat in categories">{{ cat.name }}</md-button>
 	</div>
 </md-sidenav>
 
-{{ $mdMedia('xs')}}
 
-<md-button class="show_on_small" ng-click="openLeftMenu()"><i class="material-icons">menu</i></md-button>
 
-<div class="show_gt_600" layout="row" layout-align="space-around">
+<md-button ng-if="$mdMedia('xs')" ng-click="openLeftMenu()"><i class="material-icons">menu</i></md-button>
+
+<div ng-if="$mdMedia('gt-xs')" layout="row" layout-align="space-around">
 	<div class="font_1_75" style="margin-top: 6px;line-height: 36px;">Alan Rowell</div>
-	<md-button>Selected Work</md-button>
-	<md-button>Commercial</md-button>
-	<md-button>Narrative</md-button>
-
+	<md-button ng-repeat="cat in categories">{{ cat.name }}</md-button>
 </div>
