--- a/public/angular-views/admin-views/admin-page.html
+++ b/public/angular-views/admin-views/admin-page.html
@@ -1,49 +1,51 @@
-<div class="big_gutter ">
-	<form ng-submit="upload()" class="center_text" layout="column" layout-align="space-around">
-		<h3>Select which category to upload this photo to!</h3>
-		<md-input-container class="width_50 center">
-		  <md-select ng-model="file.category" placeholder="Select category">
-		    <md-option value="cork_city">Cork City</md-option>
-		    <md-option value="stuff">Stuff</md-option>
-		  </md-select>
-		</md-input-container>
-		<md-input-container class="width_50 center">
-			<input name="file" type="file" file />
-		</md-input-container>
-		<md-input-container class="width_50 center">
-			<input class="md-button md-primary md-raised" type="submit" name="Upload" value="Upload">
-		</md-input-container>
-	</form>
+<div class=" height_100 background_white" ng-cloak>
 
-</div>
+	<md-content class="big_gutter center_text marging_b_15">
+		<form ng-submit="upload()"  layout="column" layout-align="space-around">
+			<h3>Select which category to upload this photo to!</h3>
+			<md-input-container class="width_50 center">
+			  <md-select ng-model="file.category" placeholder="Select category">
+			    <md-option value="cork_city">Cork City</md-option>
+			    <md-option value="stuff">Stuff</md-option>
+			  </md-select>
+			</md-input-container>
+			<md-input-container class="width_50 center">
+				<input name="file" type="file" file />
+			</md-input-container>
+			<md-input-container class="width_50 center">
+				<input class="md-button md-primary md-raised" type="submit" name="Upload" value="Upload">
+			</md-input-container>
+		</form>
 
-<div class="big_gutter ">
-	<form ng-submit="create_category()" class="center_text" layout="column" layout-align="space-around">
-		<h3>Create a category</h3>
+	</md-content>
+
+	<md-content class="big_gutter center_text marging_b_15">
+		<form ng-submit="create_category()" class=" " layout="column" layout-align="space-around">
+			<h3>Create a category</h3>
+			
+			<md-input-container class="width_50 center">
+				<input ng-model="category.name" name="category.name" type="text" />
+			</md-input-container>
+			<md-input-container class="width_50 center">
+				<input class="md-button md-primary md-raised" type="submit" name="Create category" value="Create category">
+			</md-input-container>
+		</form>
+
+	</md-content>
+	<md-content class="big_gutter center_text">
+		<md-grid-list md-cols-gt-xs="3" md-cols="2" md-row-height="180px"  >
+	        <md-grid-tile 	class="gray" ng-repeat="img in img_urls" md-gutter="8px">
+	            <img style="width: 75%; max-height:168px !important;" src="{{ img }}" >
+	        </md-grid-tile>
+
+	        <!-- <md-grid-tile>
+	        	<img ng-src="https://als-portfolio.s3.eu-west-1.amazonaws.com/download.jpg" style="width: 75%;max-height: 168px">
+	        </md-grid-tile> -->
+	      </md-grid-list>
 		
-		<md-input-container class="width_50 center">
-			<input ng-model="category.name" name="category.name" type="text" />
-		</md-input-container>
-		<md-input-container class="width_50 center">
-			<input class="md-button md-primary md-raised" type="submit" name="Create category" value="Create category">
-		</md-input-container>
-	</form>
+	</md-content>
+
+	
 
 </div>
-
-
-<md-content class="big_gutter center_text">
-
-
-	<md-grid-list md-cols-gt-xs="3" md-cols="2" md-row-height="180px"  >
-        <md-grid-tile 	class="gray" ng-repeat="img in img_urls" md-gutter="8px">
-            <img style="width: 75%; max-height:168px !important;" ng-src="{{ img }}" >
-        </md-grid-tile>
-
-        <!-- <md-grid-tile>
-        	<img ng-src="https://als-portfolio.s3.eu-west-1.amazonaws.com/download.jpg" style="width: 75%;max-height: 168px">
-        </md-grid-tile> -->
-      </md-grid-list>
-	
-</md-content>
 
