--- a/public/angular-views/admin-views/admin-page.html
+++ b/public/angular-views/admin-views/admin-page.html
@@ -2,37 +2,27 @@
 
 	<md-content class="big_gutter center_text marging_b_15">
 		<form ng-submit="upload()"  layout="column" layout-align="space-around">
-			<h3>Select which category to upload this photo to!</h3>
-			<md-input-container class="width_50 center">
-			  <md-select ng-model="file.category" placeholder="Select category">
-			    <md-option value="cork_city">Cork City</md-option>
-			    <md-option value="stuff">Stuff</md-option>
-			  </md-select>
-			</md-input-container>
-			<md-input-container class="width_50 center">
-				<input name="file" type="file" file />
-			</md-input-container>
-			<md-input-container class="width_50 center">
-				<input class="md-button md-primary md-raised" type="submit" name="Upload" value="Upload">
-			</md-input-container>
-		</form>
-
-	</md-content>
-
-	<md-content class="big_gutter center_text marging_b_15">
-		<form ng-submit="create_category()" class=" " layout="column" layout-align="space-around">
-			<h3>Create a category</h3>
 			
 			<md-input-container class="width_50 center">
-				<input ng-model="category.name" name="category.name" type="text" />
+				<input  name="file" type="file" file  aria-label="file" />
 			</md-input-container>
+
+			<h3>Select which category to upload this photo to!</h3>
 			<md-input-container class="width_50 center">
-				<input class="md-button md-primary md-raised" type="submit" name="Create category" value="Create category">
+			  <md-select ng-model="file.category" placeholder="Select category" required>
+			    <md-option ng-value="cat" ng-repeat="cat in categories">{{ cat.name }}</md-option>
+			  </md-select>
+			</md-input-container>
+
+			<md-input-container class="width_50 center">
+				<input class="md-button md-primary md-raised" type="submit" name="Upload" value="Upload" aria-label="Upload">
 			</md-input-container>
 		</form>
 
 	</md-content>
-	<md-content class="big_gutter center_text">
+
+	
+	<md-content class="big_gutter center_text marging_b_15">
 		<md-grid-list md-cols-gt-xs="3" md-cols="2" md-row-height="180px"  >
 	        <md-grid-tile 	class="gray" ng-repeat="img in img_urls" md-gutter="8px">
 	            <img style="width: 75%; max-height:168px !important;" src="{{ img }}" >
@@ -45,7 +35,19 @@
 		
 	</md-content>
 
-	
+	<md-content class="big_gutter center_text ">
+		<form ng-submit="create_category()" class=" " layout="column" layout-align="space-around">
+			<h3>Create a category</h3>
+			
+			<md-input-container class="width_50 center">
+				<input ng-model="category.name" name="category.name" type="text" aria-label="category"/>
+			</md-input-container>
+			<md-input-container class="width_50 center">
+				<input class="md-button md-primary md-raised" type="submit" name="Create category" value="Create category" aria-label="Create category">
+			</md-input-container>
+		</form>
+
+	</md-content>
 
 </div>
 
