--- a/public/angular-views/static-views/view-category.html
+++ b/public/angular-views/static-views/view-category.html
@@ -1,10 +1,14 @@
-<md-content>
+<div class="big_gutter">
 
-	<md-grid-list md-cols-gt-sm="3" md-cols="2" md md-row-height="16:9"  >
-        <md-grid-tile 	class="gray" ng-repeat="img in images">
-            <img style="width: 75%; max-height:168px !important;" ng-src="{{ img }}" >
-        </md-grid-tile>
-        
-      </md-grid-list>
+	<md-grid-list md-cols="3" md-row-height="16:9" md-gutter="10px">
+		<md-grid-tile class="gray"
+	    	md-rowspan="1" md-colspan="1" md-colspan-sm="1" md-colspan-xs="1" ng-repeat="img in images">
+	  		<img class="profile_thumbs" ng-src="{{ img }}" >
+	  		<md-grid-tile-footer>
+            	<!-- <md-menu>
+            	</md-menu>	 -->
+            </md-grid-tile-footer>
+	  	</md-grid-tile>
+	</md-grid-list>
 	
-</md-content>
+</div>
