Solve more issues with scale and resize

--- a/public/angular-views/static-views/view-category.html
+++ b/public/angular-views/static-views/view-category.html
@@ -1,9 +1,9 @@
 <div class="big_gutter">
 
 
-	<md-grid-list md-cols="3" md-row-height="6:2" >
+	<md-grid-list md-cols="3" md-row-height="16:9" >
         <md-grid-tile 
-            md-rowspan="3" md-colspan="1" md-colspan-sm="1" md-colspan-xs="1" ng-repeat="img in images">
+             md-colspan="1" md-colspan-sm="1" md-colspan-xs="1" ng-repeat="img in images">
           <img class="profile_thumbs" ng-src="{{ img }}" >
           <md-grid-tile-footer>
             <md-menu>
