--- a/public/angular-views/admin-views/admin-page.html
+++ b/public/angular-views/admin-views/admin-page.html
@@ -23,18 +23,35 @@
 	</md-content>
 
 	
-	<md-content class="big_gutter center_text marging_b_15">
-		<md-grid-list md-cols-gt-xs="3" md-cols="2" md-row-height="180px"  >
-	        <md-grid-tile 	class="gray" ng-repeat="img in images" md-gutter="8px">
-	            <img style="width: 75%; max-height:168px !important;" src="{{ img }}" >
+	<div class="big_gutter center_text marging_b_15">
+		<md-grid-list md-cols="3" md-row-height="16:9"  >
+	        <md-grid-tile 	md-colspan="1" md-colspan-sm="1" md-colspan-xs="1" ng-repeat="img in images" md-gutter="8px">
+	            <img class="profile_thumbs"  ng-src="{{ img.thumbUrl }}" >
+
+	            <md-grid-tile-footer>
+            		<md-menu>
+         			<!-- Trigger element is a md-button with an icon -->
+             			<md-button ng-click="$mdOpenMenu($event)" class="md-icon-button" aria-label="Open sample menu">
+               				<i class="material-icons">info</i>
+             			</md-button>
+             			<md-menu-content width="4">
+                			<!-- <md-menu-item>
+                  				<md-button ng-click="">Make profile?</md-button>
+                			</md-menu-item> -->
+
+                			<md-menu-item>
+                  				<md-button ng-click="delete_pic( img.id )" class="width_100">Delete</md-button>
+                  
+                			</md-menu-item>
+             			</md-menu-content>
+            		</md-menu>
+          		</md-grid-tile-footer>
 	        </md-grid-tile>
 
-	        <!-- <md-grid-tile>
-	        	<img ng-src="https://als-portfolio.s3.eu-west-1.amazonaws.com/download.jpg" style="width: 75%;max-height: 168px">
-	        </md-grid-tile> -->
-	      </md-grid-list>
+	        
+	    </md-grid-list>
 		
-	</md-content>
+	</div>
 
 	<md-content class="big_gutter center_text ">
 		<form ng-submit="create_category()" class=" " layout="column" layout-align="space-around">
