--- a/public/angular-views/static-views/login.html
+++ b/public/angular-views/static-views/login.html
@@ -1,5 +1,5 @@
 <md-content  layout-gt-sm="row" layout-padding >
-	<form ng-submit="login()" layout="column" flex  class="big_gutter">
+	<form ng-submit="login()" layout="column" flex  class="cred_gutter">
 	 	
 
 	  	<md-input-container md-no-float>
