--- a/public/angular-views/static-views/register.html
+++ b/public/angular-views/static-views/register.html
@@ -1,5 +1,5 @@
 <md-content layout-gt-sm="row" layout-padding>
-	<form ng-submit="register()" layout="column" class="big_gutter">
+	<form ng-submit="register()" layout="column" class="cred_gutter">
 	 	
 
 	  	<md-input-container md-no-float>
