add layout-fill to img

--- a/public/angular-views/static-views/view-category.html
+++ b/public/angular-views/static-views/view-category.html
@@ -1,9 +1,12 @@
-<md-content>
+<div>
 
-	<div class="big_gutter center_text marging_b_15">
+	<div ng-if="images.length" class="big_gutter center_text marging_b_15">
 		<md-grid-list md-cols="3" md-row-height="16:9" md-gutter="10px" >
 	        <md-grid-tile 	md-colspan="1" md-colspan-sm="1" md-colspan-xs="1" ng-repeat="img in images" >
-	            <img class="profile_thumbs"  ng-src="{{ img.thumbUrl }}" >
+	            
+	            <img class="profile_thumbs"  ng-src="{{ img.thumbUrl }}" layout-fill>
+
+	            
 
 	        </md-grid-tile>
 
@@ -12,4 +15,4 @@
 		
 	</div>
 	
-</md-content>
+</div>
