Adding width and height

--- a/public/angular-views/static-views/view-category.html
+++ b/public/angular-views/static-views/view-category.html
@@ -1,10 +1,10 @@
 <div>
 
 	<div ng-if="images.length" class="big_gutter center_text marging_b_15">
-		<md-grid-list md-cols="3" md-row-height="16:9" md-gutter="10px" >
-	        <md-grid-tile 	md-colspan="1" md-colspan-sm="1" md-colspan-xs="1" ng-repeat="img in images" >
+		<md-grid-list md-cols="3" md-row-height="16:16" md-gutter="10px" >
+	        <md-grid-tile  ng-repeat="img in images"  >
 	            
-	            <img class="profile_thumbs"  ng-src="{{ img.thumbUrl }}" layout-fill>
+	            <img class="profile_thumbs"  ng-src="{{ img.thumbUrl }}"  >
 
 	            
 
