--- a/public/angular-views/static-views/view-category.html
+++ b/public/angular-views/static-views/view-category.html
@@ -1,15 +1,22 @@
 <div>
 
 	<div ng-if="images.length" class="big_gutter center_text marging_b_15">
-		<md-grid-list md-cols="6" md-row-height="500px" md-gutter="10px" >
-	        <md-grid-tile  ng-repeat="img in images" md-colspan="{{ getColSpan( img ) }}" md-rowspan="{{ getRowSpan( img ) }}">
+
+		<div layout="row" layout-wrap>
+			<div ng-repeat="img in images" flex="50">
+				<img class="profile_thumbs center"  ng-src="{{ img.thumbUrl }}"  layout-fill>
+			</div>
+		</div>
+
+		<!-- <md-grid-list md-cols="12" md-row-height="300px" md-gutter="10px">
+	        <md-grid-tile ng-repeat="img in images" md-colspan="{{ getColSpan( img ) }}" md-rowspan="{{ getRowSpan( img ) }}">
 	            
-	            <img class="profile_thumbs"  ng-src="{{ img.thumbUrl }}"  layout-fill>
+	            <img class="profile_thumbs center"  ng-src="{{ img.thumbUrl }}"  layout-fill>
 
 	        </md-grid-tile>
 
 	        
-	    </md-grid-list>
+	    </md-grid-list> -->
 		
 	</div>
 	
