--- a/public/angular-views/static-views/view-category.html
+++ b/public/angular-views/static-views/view-category.html
@@ -2,9 +2,10 @@
 
 	<div ng-if="images.length" class="big_gutter center_text marging_b_15">
 
-		<div layout="row" layout-wrap layout-align="space-between">
-			<div ng-repeat="img in images" flex-xs="100" flex-gt-md="30" flex-gt-sm="50" class="margin_auto">
-				<img class="profile_thumbs"  ng-src="{{ img.thumbUrl }}" ng-class="figure_out_size( img )"  >
+		<div layout="row" layout-wrap layout-align="space-between" class="">
+			<div ng-repeat="img in images" flex-xs="100" flex-gt-md="30" flex-gt-sm="50" class="margin_auto ">
+				<img   ng-src="{{ img.thumbUrl }}" ng-class="figure_out_size( img )"  >
+				
 			</div>
 		</div>
 		
