--- a/public/angular-views/static-views/index.html
+++ b/public/angular-views/static-views/index.html
@@ -9,8 +9,9 @@
         				md-gutter-gt-sm="4px">
         	<md-grid-tile 	ng-repeat="img in images" 
         					md-rowspan="{{ calculate_rows( img ) }}" 
-        					md-colspan="{{ calculate_cols( img ) }}">
-        		<img ng-src="{{ img.thumbUrl }}" layout-fill>
+        					md-colspan="{{ calculate_cols( img ) }}"
+        					 >
+        		<img ng-src="{{ img.thumbUrl }}" ng-class="img.class" class="margin_l_25" layout-fill>
         	</md-grid-tile>	
 
 		</md-grid-list>
