--- a/public/angular-views/static-views/index.html
+++ b/public/angular-views/static-views/index.html
@@ -11,7 +11,7 @@
         					md-rowspan="{{ calculate_rows( img ) }}" 
         					md-colspan="{{ calculate_cols( img ) }}"
         					 >
-        		<img ng-src="{{ img.thumbUrl }}" ng-class="img.class" class="margin_l_25" layout-fill>
+        		<img ng-src="{{ img.thumbUrl }}" ng-class="img.class" layout-fill>
         	</md-grid-tile>	
 
 		</md-grid-list>
