--- a/public/angular-views/static-views/index.html
+++ b/public/angular-views/static-views/index.html
@@ -1,9 +1,10 @@
 <div class="margin_t_15 big_gutter">
 
 	<div ng-if="images.length" >
-		<md-grid-list 	md-cols="4"
-						md-cols-gt-xs="8"
-						md-cols-gt-md="14"
+		<md-grid-list 	md-cols="3"
+						md-cols-gt-xs="6"
+						md-cols-gt-sm="10"
+						md-cols-gt-md="15"
         				md-row-height="10px" 
         				md-gutter="8px" 
         				md-gutter-gt-sm="4px">
