--- a/public/angular-views/static-views/nav.html
+++ b/public/angular-views/static-views/nav.html
@@ -8,7 +8,11 @@
 <md-button ng-if="$mdMedia('xs')" ng-click="openLeftMenu()"><i class="material-icons">menu</i></md-button>
 
 <div ng-if="$mdMedia('gt-xs')" class="marging_b_15" layout="row" layout-align="space-around end">
-	<div class="large_font transtlate_y_5" style="margin-top: 6px;line-height: 36px;">Alan Rowell</div>
+	<div style="margin-top: 6px;line-height: 36px;">
+		<md-button class="large_font transtlate_y_5" ui-sref="home">
+			Alan Rowell
+		</md-button>
+	</div>
 	<md-button 	class="transtlate_y_5 no_margin no_padding large_font" 
 				ng-click="view_category( cat.id )" 
 				ng-repeat="cat in categories">
