Object fit cover

--- a/public/angular-views/static-views/index.html
+++ b/public/angular-views/static-views/index.html
@@ -11,7 +11,7 @@
         					md-colspan="3"
         					md-colspan-gt-sm="2"
         					>
-        		<img ng-src="{{ img.thumbUrl }}" class="height_100 max_width_100 crop"  ng-class="img.class" >
+        		<img ng-src="{{ img.thumbUrl }}" class="height_100 max_width_100 object_fit_cover"  ng-class="img.class" >
         	</md-grid-tile>	
 
 		</md-grid-list>
