--- a/public/angular-views/admin-views/admin-page.html
+++ b/public/angular-views/admin-views/admin-page.html
@@ -25,10 +25,23 @@
 	<div class="background_white big_gutter">
 
 		<div ng-if="images.length" >
-			<div masonry load-images="true" reload-on-show masonry-options="{'gutter': 10 }">
+			<div masonry load-images="true" reload-on-show masonry-options="{'gutter': 10,'horizontalOrder': 'true' }">
 		        <div class="grid-sizer"></div>
-		        <div class="masonry-brick" ng-repeat="img in images">
-		            <img ng-src="{{ img.thumbUrl }}" alt="A masonry brick">
+		        <div class="masonry-brick bla" ng-repeat="img in images" class="pos_rel">
+		            <img ng-src="{{ img.thumbUrl }}" class="" alt="A masonry brick">
+		            <md-menu class="pos_abs overlay_button" >
+		             <md-button ng-click="$mdMenu.open($event)" class="md-icon-button " aria-label="Open some menu">
+		               <md-icon ><i class="material-icons white_text">info_outline</i></md-icon>
+		             </md-button>
+		             <md-menu-content>
+		               <md-menu-item>
+		                 <md-button ng-click="doSomething()" aria-label="Do something">
+		                   
+		                   Do Something
+		                 </md-button>
+		               </md-menu-item>
+		             </md-menu-content>
+		            </md-menu>
 		        </div>
 		    </div>
 			
