--- a/public/angular-views/static-views/index.html
+++ b/public/angular-views/static-views/index.html
@@ -1,6 +1,6 @@
 <div class="margin_t_15 big_gutter">
 
-    <div masonry load-images="true" reload-on-show masonry-options="{'gutter': 10 }">
+    <div masonry load-images="true" reload-on-show masonry-options="{'gutter': 10,'horizontalOrder': 'true' }">
         <div class="grid-sizer"></div>
         <div class="masonry-brick" ng-repeat="img in images">
             <img ng-src="{{ img.thumbUrl }}" alt="A masonry brick">
