--- a/public/angular-views/admin-views/admin-page.html
+++ b/public/angular-views/admin-views/admin-page.html
@@ -29,7 +29,7 @@
 		        <div class="grid-sizer"></div>
 		        <div class="masonry-brick bla" ng-repeat="img in images" class="pos_rel">
 		            <img ng-src="{{ img.thumbUrl }}" class="" alt="A masonry brick">
-		            <md-menu class="pos_abs overlay_button" >
+		            <md-menu class="pos_abs overlay_button" style="min-height: 35px" >
 		             <md-button ng-click="$mdMenu.open($event)" class="md-icon-button " aria-label="Open some menu">
 		               <md-icon ><i class="material-icons white_text">info_outline</i></md-icon>
 		             </md-button>
