--- a/public/angular-views/static-views/index.html
+++ b/public/angular-views/static-views/index.html
@@ -1,4 +1,4 @@
-<div class="margin_t_15 big_gutter">
+<div class="margin_t_15 big_gutter" id="page1">
 
     <div masonry load-images="true" reload-on-show masonry-options="{'gutter': 10,'horizontalOrder': 'true' }">
         <div class="grid-sizer"></div>
