--- a/public/angular-views/static-views/index.html
+++ b/public/angular-views/static-views/index.html
@@ -1,5 +1,8 @@
 <div class="margin_t_15 big_gutter" id="page1">
 
+
+	<div class="parallax"></div>
+
     <div masonry load-images="true" reload-on-show masonry-options="{'gutter': 10,'horizontalOrder': 'true' }">
         <div class="grid-sizer"></div>
         <div class="masonry-brick" ng-repeat="img in images">
