--- a/public/angular-views/static-views/index.html
+++ b/public/angular-views/static-views/index.html
@@ -7,7 +7,7 @@
         <div class="grid-sizer"></div>
         <div class="masonry-brick" ng-repeat="img in images">
         	<img ng-src="{{ img.thumbUrl }}" alt="A masonry brick">
-        	<a href="https://www.pinterest.com/pin/create/button/" data-pin-do="buttonPin">
+        	<a href="https://www.pinterest.com/pin/create/button/" data-pin-do="buttonPin" data-pin-media="{{ img.fullSizeUrl }}">
 
 			</a>	
             
