--- a/public/angular-views/static-views/nav.html
+++ b/public/angular-views/static-views/nav.html
@@ -8,8 +8,8 @@
 <md-button ng-if="$mdMedia('xs')" ng-click="openLeftMenu()"><i class="material-icons ">menu</i></md-button>
 
 <div ng-if="$mdMedia('gt-xs')" class="marging_b_15 background_white" layout="row" layout-align="space-around end">
-	<div style="margin-top: 6px;line-height: 36px;">
-		<md-button class="large_font transtlate_y_11" ui-sref="home">
+	<div >
+		<md-button class="large_font " ui-sref="home">
 			Alan Rowell
 		</md-button>
 	</div>
