--- a/public/angular-views/static-views/index.html
+++ b/public/angular-views/static-views/index.html
@@ -8,7 +8,12 @@
         <div class="masonry-brick pos_rel " ng-repeat="img in images">
         	<img ng-src="{{ img.thumbUrl }}" alt="A masonry brick">
         	<a href="https://www.pinterest.com/pin/create/button/" data-pin-do="buttonPin" data-pin-media="{{ img.fullSizeUrl }}">
-        	
+        	<div class="pos_abs overlay_button">
+        		<md-button>
+        			ad
+        		</md-button>	
+
+        	</div>
         	
 
 			</a>	
