--- a/public/angular-views/static-views/index.html
+++ b/public/angular-views/static-views/index.html
@@ -22,5 +22,9 @@
             
         </div>
     </div>
+
+    <a ng-href="http://www.pinterest.com/pin/create/button/"
+        			>       			
+        		</a>
 	
 </div>
