--- a/public/angular-views/static-views/index.html
+++ b/public/angular-views/static-views/index.html
@@ -7,6 +7,7 @@
 	<div ng-if="$mdMedia('xs')">
 		<a ng-href="http://www.pinterest.com/pin/create/button/" 
 			data-pin-do="buttonPin" 
+			data-pin-tall="true"
 			data-pin-media="{{ img.fullSizeUrl }}"
 			>       			
 		</a>
