--- a/public/angular-views/static-views/nav.html
+++ b/public/angular-views/static-views/nav.html
@@ -20,7 +20,7 @@
 </script>
 <md-sidenav md-component-id="left" class="md-sidenav-left background_white">
 	<div  layout="column" layout-align="space-around">
-		<div class="font_1_75" style="margin-top: 6px;line-height: 36px;">Alan Rowell</div>
+		<div class="font_1_75" style="margin-top: 6px;line-height: 36px;" ui-sref="home">Alan Rowell</div>
 		<md-button ng-click="view_category( cat.id )" ng-repeat="cat in categories">{{ cat.name }}</md-button>
 	</div>
 </md-sidenav>
