--- a/public/angular-views/static-views/index.html
+++ b/public/angular-views/static-views/index.html
@@ -26,7 +26,7 @@
         data-pin-tall="true"
         data-pin-custom="true"
         >
-        <md-icon><i class="material-icons big_icon">fiber_pin</i></md-icon> 
+        <img style="width:50px;" src="https://s3.eu-west-1.amazonaws.com/als-portfolio/static/printrest-button.png">
             
     </a>
 
