Black button dark backround

--- a/public/angular-views/static-views/index.html
+++ b/public/angular-views/static-views/index.html
@@ -20,13 +20,14 @@
     </div>
 </div>
 
-<div class="big_gutter center_text margin_t_120">
+<div class="height_50 center_text margin_t_120 width_100_vw dark_grey">
     <a ng-href="http://www.pinterest.com/pin/create/button/" 
         data-pin-do="buttonBookmark" 
         data-pin-tall="true"
         data-pin-custom="true"
+
         >
-        <img style="width:25px;" src="https://s3.eu-west-1.amazonaws.com/als-portfolio/static/printrest-button.png">
+        <img style="width:35px;" class="margin_t_10" src="https://s3.eu-west-1.amazonaws.com/als-portfolio/static/pinterest-icon-black-and-white.png">
             
     </a>
 
