--- a/public/angular-views/static-views/index.html
+++ b/public/angular-views/static-views/index.html
@@ -4,7 +4,7 @@
     <div masonry load-images="true" reload-on-show masonry-options="{'gutter': 15,'horizontalOrder': 'true' }">
         <div class="grid-sizer"></div>
         <div class="masonry-brick pos_rel " ng-repeat="img in images">
-        	<img ng-src="{{ img.thumbUrl }}" alt="A masonry brick" data-pin-url="https://als-portfolio.herokuapp.com"  data-pin-media="{{ img.fullSizeUrl }}">
+        	<img ng-src="{{ img.thumbUrl }}" alt="A masonry brick" data-pin-url="https://als-portfolio.herokuapp.com"  data-pin-media="{{ img.fullSizeUrl }}" ng-click="open_image( img )">
         	
         	<!-- <div ng-if="images.length" ng-cloak class="pos_abs overlay_button">
         		<a ng-href="http://www.pinterest.com/pin/create/button/" 
