It works for some reason

--- a/public/angular-views/dialogs/big_pic_dialog.html
+++ b/public/angular-views/dialogs/big_pic_dialog.html
@@ -1,7 +1,8 @@
-<md-dialog aria-label="List dialog" class="max_width_100 max_height_100vh">
-  <md-dialog-content>
+<md-dialog aria-label="List dialog" class="max_width_90 max_height_90vh">
+  <md-dialog-content style="overflow:visible; !important;">
     
-    <img ng-src="{{ image.fullSizeUrl }}" class="max_width_95 max_height_95">
+    <div id="big_pic"  ></div>
+    <!-- <img ng-src="{{ image.fullSizeUrl }}" class="max_width_95 max_height_95"> -->
     
   </md-dialog-content>
   
