--- a/public/angular-views/dialogs/big_pic_dialog.html
+++ b/public/angular-views/dialogs/big_pic_dialog.html
@@ -1,5 +1,5 @@
 <md-dialog aria-label="List dialog" class="max_width_90 max_height_90vh">
-  <md-dialog-content style="overflow:visible; !important;">
+  <md-dialog-content >
     
     <div id="big_pic"  ></div>
     <!-- <img ng-src="{{ image.fullSizeUrl }}" class="max_width_95 max_height_95"> -->
