--- a/public/angular-views/dialogs/big_pic_dialog.html
+++ b/public/angular-views/dialogs/big_pic_dialog.html
@@ -1,5 +1,5 @@
-<md-dialog class="height_100"  aria-label="List dialog" >
-  <md-dialog-content class="height_100" >
+<md-dialog class="display_image"  aria-label="List dialog" >
+  <md-dialog-content class="display_image" >
     
 
     <div class="wrap">
