Media queries. simples

--- a/public/angular-views/dialogs/big_pic_dialog.html
+++ b/public/angular-views/dialogs/big_pic_dialog.html
@@ -1,5 +1,5 @@
 <md-dialog class="display_image"  aria-label="List dialog" >
-  <md-dialog-content class="display_image" >
+  <md-dialog-content class="display_image" style="overflow: hidden;">
     
 
     <div class="wrap">
