--- a/public/angular-views/dialogs/big_pic_dialog.html
+++ b/public/angular-views/dialogs/big_pic_dialog.html
@@ -6,7 +6,7 @@
 	    <img class="display_image" ng-src="{{ image.fullSizeUrl }}"  ng-click="show_menu( this, $event )" />
         <div class="pos_abs overlay_button full_trans">
         	 <a ng-href="http://www.pinterest.com/pin/create/button/" 
-		        data-pin-do="buttonPin" 
+		        data-pin-do="buttonBookmark" 
 		        data-pin-tall="true"
 		        data-pin-custom="true"
 		        data-pin-media="{{ image.fullSizeUrl }}"
