--- a/public/angular-views/dialogs/big_pic_dialog.html
+++ b/public/angular-views/dialogs/big_pic_dialog.html
@@ -6,11 +6,10 @@
 	    <img class="display_image" ng-src="{{ image.fullSizeUrl }}"  ng-click="show_menu( this, $event )" />
         <div class="pos_abs overlay_button full_trans">
         	 <a ng-href="http://www.pinterest.com/pin/create/button/" 
-		        data-pin-do="buttonBookmark" 
+		        data-pin-do="buttonPin" 
 		        data-pin-tall="true"
 		        data-pin-custom="true"
-		        data-pin-media="{{ image.fullSizeUrl }}"
-		        data-pin-url="{{ image.fullSizeUrl }}"
+		        data-pin-url="https://als-portfolio.herokuapp.com"  data-pin-media="{{ image.fullSizeUrl }}"
 		        >
 		        <img style="width:35px;" class="margin_t_10" src="https://s3.eu-west-1.amazonaws.com/als-portfolio/static/pinterest-icon-black-and-white.png">
 		            
