--- a/public/angular-views/static-views/index.html
+++ b/public/angular-views/static-views/index.html
@@ -12,7 +12,7 @@
     </div>
 </div>
 
-<div class="height_50 center_text margin_t_120 width_100_vw dark_grey">
+<div class="height_50 center_text margin_t_120 width_100_vw dark_grey" style="cursor: pointer;">
     <a ng-href="http://www.pinterest.com/pin/create/button/" 
         data-pin-do="buttonBookmark" 
         data-pin-tall="true"
