--- a/public/angular-views/dialogs/big_pic_dialog.html
+++ b/public/angular-views/dialogs/big_pic_dialog.html
@@ -14,6 +14,7 @@
 		        <img style="width:35px;" class="margin_t_10" src="https://s3.eu-west-1.amazonaws.com/als-portfolio/static/pinterest-icon-black-and-white.png">
 		            
 		    </a>
+		    <a href="#" ng-click="fb_share( image.fullSizeUrl )">button</a>
         </div>
 
 	    <div class="pos_abs overlay_button_bottom full_trans">
