--- a/public/angular-views/static-views/index.html
+++ b/public/angular-views/static-views/index.html
@@ -23,6 +23,11 @@
             
     </a>
 
+    <a href="#" ng-click="fb_share()">
+        <img style="width:35px;" src="https://s3.eu-west-1.amazonaws.com/als-portfolio/static/black_fb_share.jpg?">
+    </a>
+    
+
 </div>
 
 <script type="text/javascript">
