--- a/public/angular-views/static-views/nav.html
+++ b/public/angular-views/static-views/nav.html
@@ -1,22 +1,26 @@
 <script>
-    window.isLoaded = false;
-  window.fbAsyncInit = function() {
-    FB.init({
-      appId            : '150299182299074',
-      autoLogAppEvents : true,
-      xfbml            : true,
-      version          : 'v2.11'
-    });
-    window.fbReady( FB )
-  };
 
-  (function(d, s, id){
-     var js, fjs = d.getElementsByTagName(s)[0];
-     if (d.getElementById(id)) {return;}
-     js = d.createElement(s); js.id = id;
-     js.src = "https://connect.facebook.net/en_US/sdk.js";
-     fjs.parentNode.insertBefore(js, fjs);
-   }(document, 'script', 'facebook-jssdk'));
+    window.init_fb = function( id ){
+        window.isLoaded = false;
+        window.fbAsyncInit = function() {
+            FB.init({
+            appId            : id,
+            autoLogAppEvents : true,
+            xfbml            : true,
+            version          : 'v2.11'
+        });
+        window.fbReady( FB )
+        };
+
+        (function(d, s, id){
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) {return;}
+            js = d.createElement(s); js.id = id;
+            js.src = "https://connect.facebook.net/en_US/sdk.js";
+            fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));
+    }
+    
 </script>
 <md-sidenav md-component-id="left" class="md-sidenav-left background_white">
 	<div  layout="column" layout-align="space-around">
