--- a/public/angular-views/static-views/index.html
+++ b/public/angular-views/static-views/index.html
@@ -3,7 +3,7 @@
 	
    <div class="big_gutter" ng-cloak>
        
-       <div masonry load-images="true" reload-on-show masonry-options="{'gutter': 15,'horizontalOrder': 'true' }">
+       <div id="container" masonry load-images="true" reload-on-show masonry-options="{'gutter': 15,'horizontalOrder': 'true' }">
            <div class="grid-sizer"></div>
            <div class="masonry-brick pos_rel " ng-repeat="img in images">
 
