Wait for all images

--- a/public/angular-views/static-views/index.html
+++ b/public/angular-views/static-views/index.html
@@ -1,6 +1,6 @@
 <div class="parallax"></div>
 <div class="margin_t_15 padding_t_15"  style="position:relative;margin: 400px 0 0 0;width: 100vw;background: #e9ebee;">
-	
+	{{ imageCounter }}
    <div class="big_gutter" ng-cloak>
        
        <div ng-show="finis"  id="container" masonry load-images="true" reload-on-show masonry-options="{'gutter': 15,'horizontalOrder': 'true' }">
